# tinc_mesh

./: .travis.yml  readme.md  setup.cfg  setup.py  tox.ini
src/main/tinc_mesh/: __init__.py  setup.py  tinker.py
src/main/tinc_mesh/etc/: readme.md
src/main/tinc_mesh/etc/systemd/system/: tinc.service  tinc@.service
src/main/tinc_mesh/etc/tinc/mesh/: keygen.py  subnet-down  subnet-up  tinc-down  tinc-up  tinc.conf
src/main/tinc_mesh/etc/tinc/mesh/hosts/: readme.md
src/main/tinc_mesh/etc/tinc/mesh/nodes/: readme.md
src/test/tinc_mesh_test/: tinker_test.py
tool/: github_squash.py  install_local.py  release_update.py  tox_verify.py
