[metadata]

name = tinc_mesh
version = 0.1.3

requires_python = >=3.8

author = Andrei Pozolotin
author_email = andrei.pozolotin@gmail.com

summary = tinc mesh vpn

description_file = readme.md
description_content_type = text/markdown; charset=UTF-8

home-page = https://github.com/random-python/tinc_mesh

license = Apache-2

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities
    

keywords =
    tinc
    mesh
    systemd

[files]

[options]    

packages =
    tinc_mesh
    tinc_mesh_test
    
package_dir = 
    tinc_mesh      = src/main/tinc_mesh
    tinc_mesh_test = src/test/tinc_mesh_test

[entry_points]

console_scripts =
# expose services for systemd
    tinc_mesh_install    = tinc_mesh.setup:service_install
    tinc_mesh_uninstall  = tinc_mesh.setup:service_uninstall
    
[pbr]

warnerrors = True
skip_authors = True
skip_git_sdist = False
skip_changelog = True
